Firmware/semgdaq_/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:48:11 **** Incremental Build of configuration Debug for project semgdaq_ ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/_DMA_Sort.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DARM_MATH_CM4 -DUSE_HAL_DRIVER -DSTM32G4A1xx -c -I"C:/Users/moshte/Desktop/moshte/Firmware projects/CubeIDE/Workspace/semgdaq_/Firmware/semgdaq_/Drivers/CMSIS/DSP/Include" -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/_DMA_Sort.d" -MT"Core/Src/_DMA_Sort.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/_DMA_Sort.o"
../Core/Src/_DMA_Sort.c: In function 'ADC1_DMA_sort_lhb':
../Core/Src/_DMA_Sort.c:40:99: error: expected statement before ')' token
   40 |                         for(uint32_t n=ADC_DMA_QUATERBUFFERSIZE; n<ADC_DMA_HALFBUFFERSIZE-1; n++) ) ) // Stores data on the lower half of IN1 channel data buffer
      |                                                                                                   ^
../Core/Src/_DMA_Sort.c:40:25: warning: this 'for' clause does not guard... [-Wmisleading-indentation]
   40 |                         for(uint32_t n=ADC_DMA_QUATERBUFFERSIZE; n<ADC_DMA_HALFBUFFERSIZE-1; n++) ) ) // Stores data on the lower half of IN1 channel data buffer
      |                         ^~~
../Core/Src/_DMA_Sort.c:40:101: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'for'
   40 |                         for(uint32_t n=ADC_DMA_QUATERBUFFERSIZE; n<ADC_DMA_HALFBUFFERSIZE-1; n++) ) ) // Stores data on the lower half of IN1 channel data buffer
      |                                                                                                     ^
../Core/Src/_DMA_Sort.c:40:101: error: expected statement before ')' token
../Core/Src/_DMA_Sort.c:42:65: error: 'n' undeclared (first use in this function)
   42 |                                 ADC1_DMA_sort_ptr->ADC1_IN1_bfr[n]=ADC1_DMA_sort_ptr->ADC1_DMA_bfr[m];
      |                                                                 ^
../Core/Src/_DMA_Sort.c:42:65: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:40: Core/Src/_DMA_Sort.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
14:51:52 **** Incremental Build of configuration Debug for project semgdaq_ ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/_DMA_Sort.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DARM_MATH_CM4 -DUSE_HAL_DRIVER -DSTM32G4A1xx -c -I"C:/Users/moshte/Desktop/moshte/Firmware projects/CubeIDE/Workspace/semgdaq_/Firmware/semgdaq_/Drivers/CMSIS/DSP/Include" -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/_DMA_Sort.d" -MT"Core/Src/_DMA_Sort.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/_DMA_Sort.o"
arm-none-eabi-gcc -o "semgdaq_.elf" @"objects.list"  -larm_cortexM4lf_math -mcpu=cortex-m4 -T"C:\Users\moshte\Desktop\moshte\Firmware projects\CubeIDE\Workspace\semgdaq_\Firmware\semgdaq_\STM32G4A1VETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="semgdaq_.map" -Wl,--gc-sections -static -L"C:\Users\moshte\Desktop\moshte\Firmware projects\CubeIDE\Workspace\semgdaq_\Firmware\semgdaq_\Drivers\CMSIS\Lib\GCC" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: semgdaq_.elf
 
arm-none-eabi-size  semgdaq_.elf 
arm-none-eabi-objdump -h -S semgdaq_.elf  > "semgdaq_.list"
   text	   data	    bss	    dec	    hex	filename
  21388	  30812	   2580	  54780	   d5fc	semgdaq_.elf
Finished building: default.size.stdout
 
Finished building: semgdaq_.list
 
